Correct some layout issues, update dependencies, and add normalize.css

--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -1,3 +1,4 @@
+@import '~normalize.css/normalize.css';
 @import 'mixins.scss';
 
 html,
@@ -16,10 +17,6 @@ body {
   box-sizing: inherit;
 }
 
-main {
-  display: block;
-}
-
 p {
   padding: 0;
   margin: 0 0 1.65rem;
@@ -35,11 +32,13 @@ img {
 a {
   color: #000;
   font-weight: bold;
-  -webkit-text-decoration-skip: objects;
+  text-decoration-skip: ink;
+  text-decoration-skip-ink: auto;
 }
 
 .headroom {
   box-shadow: 0 0 8px rgba(#000, 0.3);
+  background-color: #fff;
 }
 
 .primary-navigation {
@@ -49,6 +48,7 @@ a {
   max-width: map-get($breakpoints, md);
   margin-left: auto;
   margin-right: auto;
+  justify-content: space-around;
 
   a {
     display: block;
@@ -72,6 +72,7 @@ a {
   }
 
   @include break-at(sm) {
+    justify-content: unset;
     flex-direction: row;
 
     a {
@@ -82,6 +83,9 @@ a {
 
 .logo-container {
   width: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   a {
     display: block;
@@ -111,7 +115,7 @@ a {
 
   a {
     margin: 0;
-    flex: 1 1 50%;
+    flex: 1 1 40%;
     text-align: center;
   }
 
@@ -373,15 +377,14 @@ a {
   position: relative;
   display: flex;
   flex-direction: column;
-  margin: 10px 30px;
+  margin: 10px auto;
   border: 5px solid #e5cf5f;
   padding: 20px;
 
   @include break-at(sm) {
     margin: 3% auto;
     flex-direction: row;
-    max-width: map-get($breakpoints, md);
-    width: 100%;
+    max-width: map-get($breakpoints, md) - 50px;
   }
 }
 
